--- a/_data/button_groups.yml
+++ b/_data/button_groups.yml
@@ -3,51 +3,37 @@ projects:
   items:
     - title: "Creative Agency"
       url: "/projects/cre01"
-      icon: "🎨"
     - title: "Death Stranding"
       url: "/projects/gam01"
-      icon: "🎮"
     - title: "XR Ethics"
       url: "/projects/xr01"
-      icon: "🕶️"
     - title: "Be-Longing"
       url: "/projects/art02"
-      icon: "✨"
     - title: "Geylang Drip City"
       url: "/projects/des01"
-      icon: "🎨"
 
 publications:
   name: "Publications"
   items:
     - title: "Supporting Artefact Awareness"
       url: "/publications/art01"
-      icon: "👥"
-    - title: "Mixed Reality for Engineering Design"
+    - title: "MR for Engineering Design"
       url: "/publications/mr01"
-      icon: "🔍"
-    - title: "Mixed Reality for Mechanical Design"
+    - title: "MR for Mechanical Design"
       url: "/publications/mr02"
-      icon: "⚙️"
-    - title: "Mixed Reality Interface for Load Application"
+    - title: "MR Interface for Load Application"
       url: "/publications/mr03"
-      icon: "📊"
     - title: "Designing with Holograms"
       url: "/publications/hol01"
-      icon: "🖼️"
     - title: "In-Situ Visual Guidance"
       url: "/publications/vis01"
-      icon: "💡"
 
 research:
   name: "Research"
   items:
     - title: "HCI"
       url: "/research/#hci"
-      icon: "🔬"
     - title: "AI"
       url: "/research/#ai"
-      icon: "🤖"
     - title: "XR"
-      url: "/research/#xr"
-      icon: "🕶️" 
+      url: "/research/#xr" 
