--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 author: Emran Poh
 year: 2025
+location: Singapore
 
 # Social Media
 github_username: emranpoh
