--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ url: ""
 author: Emran Poh
 year: 2025
 location: Singapore
+profile_image: /assets/images/me.jpeg
 
 # Social Media
 github_username: emranpoh
