--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ profile_image: /assets/images/me.jpeg
 
 # Social Media
 github_username: emranpoh
+linkedin_username: emranpoh
+instagram_username: emranpoh_
+telegram_username: ehhhhmmmm
+scholar_id: wYcrORkAAAAJ
 # twitter_username: jekyllrb
 # linkedin_username: your-linkedin-username
 
