--- a/_data/others.yml
+++ b/_data/others.yml
@@ -4,11 +4,13 @@ presentations:
     event: "Synteraction Lab Seminar"
     description: "A talk exploring themes of connection and isolation in Death Stranding, relating them to human-agent interaction."
     link: ""
+    image: "eidh.png"
   - title: "How to use XR for Physical Assault — A Less-than-Optimistic Commentary of 'The Ethics of Realism in Virtual and Augmented Reality' through Netflix's Black Mirror"
     date: "2023-06-23"
     event: "Synteraction Lab Seminar"
     description: "A critical commentary on the ethics of realism in XR, referencing Black Mirror."
     link: ""
+    image: "xr-assault.png"
   - title: "Mixed Reality for Design Engineering & FEA"
     date: "2022-02-18"
     event: "Singapore Airshow"
