Update configuration and styling

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ defaults:
     values:
       layout: "pages/default"
   - scope:
-      path: "index.markdown"
+      path: "content/index.markdown"
     values:
       layout: "pages/default"
       permalink: /
