Customize publications and theses display: remove scrollbar, change to list layout, add author links, remove y-transform animations, add theses section, and improve venue display

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -129,7 +129,7 @@ education:
   - start_month: ""
     start_year: "2025"
     end_month: ""
-    end_year: ""
+    end_year: "2029"
     current: true
     title: "Doctor of Philosophy (Computer Science)"
     organization: "Singapore Management University (SMU)"
