Add citations and fix Google Scholar button issue
- Add IEEE citations for Supporting Artefact Awareness and MR4FEA papers
- Add Springer citation for MR4FEA-Load paper
- Add HCI-International citation for MR4Assembly paper
- Fix Google Scholar button causing masonry layout to unload
- Replace custom citation icon with Font Awesome fa-quote-left
- Improve citation button visual feedback with checkmark animation

--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -14,6 +14,7 @@
   url: "/publications/art01"
   pdf: "/assets/pdfs/sample.pdf"
   abstract: "We present a system that supports artefact awareness in partially-replicated workspaces, enabling users to maintain awareness of shared objects and their states across different physical locations."
+  citation: "@INPROCEEDINGS{10322229,\n  author={Poh, Emran and Tang, Anthony and Lee, Jeannie S. and Shengdong, Zhao},\n  booktitle={2023 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct)}, \n  title={Supporting Artefact Awareness in Partially-Replicated Workspaces}, \n  year={2023},\n  volume={},\n  number={},\n  pages={55-59},\n  keywords={Human computer interaction;Social computing;Collaboration;X reality;Human-centered computing Collaborative and social computing theory;concepts and paradigms;H;uman-centered computing Computer supported cooperative work;Human-centered computing Computer supported cooperative work;Human-centered computing Interaction design},\n  doi={10.1109/ISMAR-Adjunct60411.2023.00019}\n}"
   tags:
     - name: "pdf"
       url: "https://ieeexplore.ieee.org/abstract/document/10322229/"
@@ -52,6 +53,7 @@
   emoji: "🔍"
   url: "/publications/mr01"
   abstract: "This work explores the use of mixed reality for engineering design review, specifically focusing on the visualization and interaction with finite element analysis results in an immersive environment."
+  citation: "@INPROCEEDINGS{9974521,\n  author={Poh, Emran and Liong, Kyrin and Lee, Jeannie S.A.},\n  booktitle={2022 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct)}, \n  title={Mixed Reality for Engineering Design Review Using Finite Element Analysis}, \n  year={2022},\n  volume={},\n  number={},\n  pages={657-662},\n  keywords={Visualization;Solid modeling;Absorption;Virtual environments;Mixed reality;Virtual reality;Particle measurements;Mixed Reality;Finite Element Analysis;Design Review;Engineering},\n  doi={10.1109/ISMAR-Adjunct57072.2022.00136}\n}"
   tags:
     - name: "pdf"
       url: "https://ieeexplore.ieee.org/abstract/document/9974521"
@@ -70,6 +72,7 @@
   emoji: "⚙️"
   url: "/publications/mr02"
   abstract: "We present a mixed reality system for mechanical design and assembly planning, enabling users to visualize and interact with 3D models in a physical space for improved assembly understanding."
+  citation: "@InProceedings{10.1007/978-3-031-19679-9_72,\nauthor=\"Poh, Emran\nand Liong, Kyrin\nand Lee, Jeannie S. A.\",\neditor=\"Stephanidis, Constantine\nand Antona, Margherita\nand Ntoa, Stavroula\nand Salvendy, Gavriel\",\ntitle=\"Mixed Reality for Mechanical Design and Assembly Planning\",\nbooktitle=\"HCI International 2022 -- Late Breaking Posters\",\nyear=\"2022\",\npublisher=\"Springer Nature Switzerland\",\naddress=\"Cham\",\npages=\"572--579\",\nabstract=\"Design for Manufacturing and Assembly (DFMA) is a crucial design stage within the heavy vehicle manufacturing process that involves optimising the order and feasibility of the parts assembly process to reduce manufacturing complexity and overall cost. Existing work has focused on conducting DFMA within virtual environments to reduce manufacturing costs, but users are less able to relate and compare physical characteristics of a virtual component with real physical objects. Therefore, a Mixed Reality (MR) application is developed for engineers to visualise and manipulate assembly parts virtually, conduct and plan out an assembly within its intended physical environment. Two pilot evaluations were conducted with both engineering professionals and non-engineers to assess effectiveness of the software for assembly planning. Usability results suggest that the application is overall usable (M=56.1, SD=7.89), and participants felt a sense of involvement in the activity (M=13.1, SD=3.3). Engineering professionals see the application as a useful and cost-effective tool for optimising their mechanical assembly designs.\",\nisbn=\"978-3-031-19679-9\"\n}"
   tags:
     - name: "pdf"
       url: "https://link.springer.com/chapter/10.1007/978-3-031-19679-9_72"
@@ -88,6 +91,7 @@
   emoji: "📊"
   url: "/publications/mr03"
   abstract: "This work introduces a mixed reality interface for applying loads in finite element analysis, providing an intuitive way to interact with and visualize load applications in 3D space."
+  citation: "@inproceedings{10.1007/978-3-030-77626-8_32,\nauthor = {Poh, Emran and Liong, Kyrin and Lee, Jeannie S. A.},\ntitle = {Mixed Reality Interface for Load Application in Finite Element Analysis},\nyear = {2021},\nisbn = {978-3-030-77625-1},\npublisher = {Springer-Verlag},\naddress = {Berlin, Heidelberg},\nurl = {https://doi.org/10.1007/978-3-030-77626-8_32},\ndoi = {10.1007/978-3-030-77626-8_32},\nabstract = {Finite Element Analysis (FEA) is an integral process in manufacturing design, providing assurance of quality and structural integrity of a manufactured item. FEA involves conducting rigorous stress simulations on a designed model to study its structural behaviour when under specific loading scenarios. Current FEA tools involve viewing and manipulating the 3D model displayed on a monitor screen. A Mixed Reality (MR) user interface allowing for direct manipulation and specification of loading scenarios on a designed model was developed, thus enabling design engineers to find new ways of interacting and visualising FEA results for analysis and thus reducing unnecessary prototyping costs. Three gesture interfaces were developed to allow application of load parameters on a surface of a model, namely: Point-Apply, Point-Hold, and Point-Drag. A pilot evaluation was conducted to study the suitability of each as an interface designed for engineers. Results suggest that Point-Hold is empirically the most usable interface compared to the other interfaces.},\nbooktitle = {Social Computing and Social Media: Experience Design and Social Network Analysis        : 13th International Conference, SCSM 2021, Held as Part of the 23rd HCI International Conference, HCII 2021, Virtual Event, July 24–29, 2021, Proceedings, Part  I},\npages = {470–483},\nnumpages = {14},\nkeywords = {Finite Element Analysis, Mixed reality, Gesture, 3D user interface, Digital twin}\n}"
   tags:
     - name: "pdf"
       url: "https://link.springer.com/chapter/10.1007/978-3-030-77626-8_32"
