--- a/_data/news.yml
+++ b/_data/news.yml
@@ -15,6 +15,7 @@ news_items:
     featured: true
     type: "conference"
     conference: "SG-HCI Meetup 2025"
+    image: "sghci-meetup-2025.jpeg"
     conference_link: "https://sghcimeetup25.notion.site/#1a91bd1704258010bc6afdf73378c1d1"
     institution: "smu"
     summary: "Participating in the Singapore HCI Meetup 2025, a gathering of HCI researchers across Singapore."
